@@ -5,6 +5,8 @@ examples/ex3.pl
 examples/ex4.pl
 images/Kharkiv.png
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -23,11 +25,11 @@ META.yml
 README
 share/kharkiv-map.xml
 SIGNATURE
-t/Map-Tube-Kharkiv/00-use.t
-t/Map-Tube-Kharkiv/01-version.t
-t/Map-Tube-Kharkiv/02-pod_coverage.t
-t/Map-Tube-Kharkiv/03-pod.t
-t/Map-Tube-Kharkiv/04-map.t
-t/Map-Tube-Kharkiv/05-get_shortest_route.t
-t/Map-Tube-Kharkiv/06-name.t
-t/Map-Tube-Kharkiv/07-xml.t
+t/Map-Tube-Kharkiv/01-use.t
+t/Map-Tube-Kharkiv/02-version.t
+t/Map-Tube-Kharkiv/03-map.t
+t/Map-Tube-Kharkiv/04-get_shortest_route.t
+t/Map-Tube-Kharkiv/05-name.t
+t/Map-Tube-Kharkiv/06-xml.t
+xt/Map-Tube-Kharkiv/01-pod_coverage.t
+xt/Map-Tube-Kharkiv/02-pod.t
