@@ -6,12 +6,9 @@ build_requires:
   Encode: 0
   English: 0
   ExtUtils::MakeMaker: 6.36
-  File::Object: 0.08
   Test::Map::Tube: 0.07
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -28,6 +25,7 @@ no_index:
     - inc
     - share
     - t
+    - xt
 requires:
   File::Share: 0
   Map::Tube: '3.01'
