@@ -4,6 +4,7 @@
  - Add get_line_by_id() and get_line_by_name() methods to doc.
  - Add lines to XML document.
  - Add test of map validity.
+ - Move author tests to xt/ directory.
  - Rewrite SEE ALSO section to new style.
  - Update Module::Install to 1.16 version.
  - Update copyright years to 2015.
